Fixed core_relational pom for persistence (#496)

--- a/legend-pure-code-compiled-core-persistence/pom.xml
+++ b/legend-pure-code-compiled-core-persistence/pom.xml
@@ -56,6 +56,11 @@
                         <artifactId>legend-pure-code-compiled-core-external-shared</artifactId>
                         <version>${project.version}</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.finos.legend.pure</groupId>
+                        <artifactId>legend-pure-code-compiled-core-relational</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
                 </dependencies>
             </plugin>
             <plugin>
