--- a/legend-pure-runtime-java-extension-dsl-mapping/pom.xml
+++ b/legend-pure-runtime-java-extension-dsl-mapping/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.1.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
