--- a/legend-pure-ide-light/src/main/web/package.json
+++ b/legend-pure-ide-light/src/main/web/package.json
@@ -33,6 +33,9 @@
   "browserslist": [
     "last 2 Chrome versions"
   ],
+  "resolutions": {
+    "@types/react": "^17.0.0"
+  },
   "devDependencies": {
     "@babel/core": "7.15.8",
     "@finos/babel-preset-legend-studio": "0.0.26",
