--- a/pom.xml
+++ b/pom.xml
@@ -356,6 +356,7 @@
                     <trimStackTrace>false</trimStackTrace>
                     <useSystemClassLoader>true</useSystemClassLoader>
                     <useManifestOnlyJar>false</useManifestOnlyJar>
+                    <trimStackTrace>false</trimStackTrace>
                     <reportsDirectory>${project.parent.basedir}/legend-pure-test-reports/surefire-reports-aggregate
                     </reportsDirectory>
                 </configuration>
