--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <name>Legend Pure</name>
     <groupId>org.finos.legend.pure</groupId>
     <artifactId>legend-pure</artifactId>
-    <version>2.2.1</version>
+    <version>2.2.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -119,7 +119,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/finos/legend-pure</developerConnection>
-        <tag>legend-pure-2.2.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
