--- a/legend-pure-m3-platform/pom.xml
+++ b/legend-pure-m3-platform/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure</artifactId>
-        <version>3.6.3-SNAPSHOT</version>
+        <version>3.7.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
