--- a/pom.xml
+++ b/pom.xml
@@ -105,8 +105,6 @@
         <json-simple.version>1.1.1</json-simple.version>
         <apache-httpcomponents.version>4.5.13</apache-httpcomponents.version>
         <junit.version>4.13.1</junit.version>
-        <jacoco.maven.plugin.version>0.8.5</jacoco.maven.plugin.version>
-        <maven.javadoc.plugin.version>3.3.1</maven.javadoc.plugin.version>
         <dropwizard.version>1.3.29</dropwizard.version>
         <dropwizard-swagger.version>1.3.17-1</dropwizard-swagger.version>
         <joda.time.version>2.10.6</joda.time.version>
@@ -116,6 +114,11 @@
         <snakeyaml.version>1.33</snakeyaml.version>
         <guava.version>30.0-jre</guava.version>
         <h2.version>1.4.197</h2.version>
+
+        <!-- Plugin -->
+        <jacoco.maven.plugin.version>0.8.5</jacoco.maven.plugin.version>
+        <maven.javadoc.plugin.version>3.3.1</maven.javadoc.plugin.version>
+        <maven.download.plugin.version>1.6.8</maven.download.plugin.version>
     </properties>
 
 
@@ -146,6 +149,11 @@
                         <source>8</source>
                         <doclint>none</doclint>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.googlecode.maven-download-plugin</groupId>
+                    <artifactId>download-maven-plugin</artifactId>
+                    <version>${maven.download.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
