Repackage and refactor Connection and Runtime

--- a/legend-pure-m2-dsl-mapping-pure/src/main/resources/platform_dsl_mapping.definition.json
+++ b/legend-pure-m2-dsl-mapping-pure/src/main/resources/platform_dsl_mapping.definition.json
@@ -1,5 +1,5 @@
 {
   "name" : "platform_dsl_mapping",
-  "pattern" : "(meta::pure::mapping|meta::pure::store|meta::pure::metamodel|meta::pure::runtime)(::.*)?",
+  "pattern" : "(meta::pure::mapping|meta::external::store::model|meta::pure::store|meta::pure::metamodel|meta::pure::runtime|meta::core::runtime)(::.*)?",
   "dependencies" : ["platform", "platform_functions"]
 }
