--- a/legend-pure-m3-core/pom.xml
+++ b/legend-pure-m3-core/pom.xml
@@ -155,7 +155,8 @@
                                 <argument>
                                     /platform/pure/grammar/milestoning.pure,
                                     /platform/pure/routing.pure,
-                                    /platform/pure/anonymousCollections.pure
+                                    /platform/pure/anonymousCollections.pure,
+                                    /platform/pure/relation.pure
                                 </argument>
                             </arguments>
                         </configuration>
