--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
         <module>legend-pure-m2-store-relational-grammar</module>
         <module>legend-pure-runtime-java-extension-store-relational</module>
 
+        <module>legend-pure-m2-dsl-tds-pure</module>
+        <module>legend-pure-m2-dsl-tds-grammar</module>
+        <module>legend-pure-m2-functions-relation-pure</module>
+
         <module>legend-pure-maven-generation-par</module>
         <module>legend-pure-maven-generation-java</module>
 
@@ -623,6 +627,16 @@
             <dependency>
                 <groupId>org.finos.legend.pure</groupId>
                 <artifactId>legend-pure-m2-dsl-mapping-pure</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.finos.legend.pure</groupId>
+                <artifactId>legend-pure-m2-dsl-tds-pure</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.finos.legend.pure</groupId>
+                <artifactId>legend-pure-m2-dsl-tds-grammar</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
