--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
         <module>legend-pure-m2-dsl-tds-pure</module>
         <module>legend-pure-m2-dsl-tds-grammar</module>
         <module>legend-pure-m2-functions-relation-pure</module>
+        <module>legend-pure-runtime-java-extension-functions-relation</module>
 
         <module>legend-pure-maven-generation-par</module>
         <module>legend-pure-maven-generation-java</module>
@@ -535,6 +536,11 @@
             <dependency>
                 <groupId>org.finos.legend.pure</groupId>
                 <artifactId>legend-pure-m2-functions-json-pure</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.finos.legend.pure</groupId>
+                <artifactId>legend-pure-m2-functions-relation-pure</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
