Add support for compiled mode for relation functions. Add support for multi-if. Change function matching strategy Equal/Type Param/Subtype -> Equal/Subtype/Type Param

--- a/legend-pure-m2-store-relational-pure/pom.xml
+++ b/legend-pure-m2-store-relational-pure/pom.xml
@@ -104,7 +104,8 @@
                                 <argument>RelationalStore</argument>
                                 <argument>
                                     /platform_store_relational/grammar/relational.pure,
-                                    /platform_store_relational/grammar/relationalMapping.pure
+                                    /platform_store_relational/grammar/relationalMapping.pure,
+                                    /platform_store_relational/grammar/relationAccessor.pure
                                 </argument>
                             </arguments>
                         </configuration>
