--- a/legend-pure-runtime-java-extension-functions-relation/pom.xml
+++ b/legend-pure-runtime-java-extension-functions-relation/pom.xml
@@ -59,7 +59,26 @@
                                 org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaCodeGeneration
                             </mainClass>
                             <arguments>
-                                <argument>platform_functions_json</argument>
+                                <argument>platform_functions_relation</argument>
+                                <argument>${project.build.directory}/generated-test-resources</argument>
+                                <argument>${project.build.directory}</argument>
+                            </arguments>
+                            <includeProjectDependencies>true</includeProjectDependencies>
+                            <includePluginDependencies>true</includePluginDependencies>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>GenerateTestJavaCodeTDS</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>
+                                org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaCodeGeneration
+                            </mainClass>
+                            <arguments>
+                                <argument>platform_dsl_tds</argument>
                                 <argument>${project.build.directory}/generated-test-resources</argument>
                                 <argument>${project.build.directory}</argument>
                             </arguments>
@@ -68,65 +87,19 @@
                         </configuration>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.finos.legend.pure</groupId>
+                        <artifactId>legend-pure-m2-functions-relation-pure</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.finos.legend.pure</groupId>
+                        <artifactId>legend-pure-m2-dsl-tds-grammar</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.finos.legend.pure</groupId>-->
-<!--                <artifactId>legend-pure-maven-generation-java</artifactId>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <phase>compile</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>build-pure-compiled-jar</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <generateSources>true</generateSources>-->
-<!--                            <preventJavaCompilation>true</preventJavaCompilation>-->
-<!--                            <generationType>modular</generationType>-->
-<!--                            <useSingleDir>true</useSingleDir>-->
-<!--                            <repositories>-->
-<!--                                <repository>platform_functions_json</repository>-->
-<!--                            </repositories>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--                <dependencies>-->
-<!--                    <dependency>-->
-<!--                        <groupId>org.finos.legend.pure</groupId>-->
-<!--                        <artifactId>legend-pure-m2-functions-pure</artifactId>-->
-<!--                        <version>${project.version}</version>-->
-<!--                    </dependency>-->
-<!--                    <dependency>-->
-<!--                        <groupId>org.finos.legend.pure</groupId>-->
-<!--                        <artifactId>legend-pure-m2-functions-json-pure</artifactId>-->
-<!--                        <version>${project.version}</version>-->
-<!--                    </dependency>-->
-<!--                </dependencies>-->
-<!--            </plugin>-->
-<!--            <plugin>-->
-<!--                <groupId>org.codehaus.mojo</groupId>-->
-<!--                <artifactId>exec-maven-plugin</artifactId>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <phase>generate-sources</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>java</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--                <configuration>-->
-<!--                    <mainClass>-->
-<!--                        org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaModelFactoryGenerator-->
-<!--                    </mainClass>-->
-<!--                    <arguments>-->
-<!--                        <argument>${project.build.directory}/generated-sources/</argument>-->
-<!--                        <argument>org.finos.legend.pure.runtime.java.extension.external.json.compiled.JsonExtensionCompiled</argument>-->
-<!--                        <argument>JSON</argument>-->
-<!--                        <argument>platform_functions_json</argument>-->
-<!--                    </arguments>-->
-<!--                    <includeProjectDependencies>true</includeProjectDependencies>-->
-<!--                    <includePluginDependencies>true</includePluginDependencies>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -146,7 +119,6 @@
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m4</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m3-core</artifactId>
@@ -154,10 +126,14 @@
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-m2-functions-json-pure</artifactId>
-            <scope>runtime</scope>
+            <artifactId>legend-pure-m2-dsl-tds-pure</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m2-dsl-tds-grammar</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m2-functions-relation-pure</artifactId>
@@ -194,12 +170,18 @@
             <artifactId>junit</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-runtime-java-extension-functions</artifactId>
-            <type>test-jar</type>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.finos.legend.pure</groupId>-->
+<!--            <artifactId>legend-pure-runtime-java-extension-functions-json</artifactId>-->
+<!--            <type>test-jar</type>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.finos.legend.pure</groupId>-->
+<!--            <artifactId>legend-pure-runtime-java-extension-functions</artifactId>-->
+<!--            <type>test-jar</type>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-runtime-java-engine-compiled</artifactId>
@@ -210,11 +192,6 @@
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m3-core</artifactId>
             <type>test-jar</type>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.finos.legend.pure</groupId>
-            <artifactId>legend-pure-m2-dsl-tds-grammar</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
