--- a/legend-pure-m2-dsl-mapping-grammar/pom.xml
+++ b/legend-pure-m2-dsl-mapping-grammar/pom.xml
@@ -94,6 +94,10 @@
         </dependency>
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m2-dsl-store-pure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m2-dsl-mapping-pure</artifactId>
         </dependency>
 
