--- a/legend-pure-runtime-java-extension-store-relational/pom.xml
+++ b/legend-pure-runtime-java-extension-store-relational/pom.xml
@@ -128,6 +128,10 @@
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m2-dsl-mapping-pure</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m2-dsl-store-pure</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
@@ -145,6 +149,10 @@
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-runtime-java-extension-dsl-mapping</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-runtime-java-extension-dsl-store</artifactId>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.finos.legend.pure</groupId>-->
