--- a/legend-pure-functions/legend-pure-functions-base/legend-pure-runtime-java-extension-interpreted-functions-base/pom.xml
+++ b/legend-pure-functions/legend-pure-functions-base/legend-pure-runtime-java-extension-interpreted-functions-base/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure-functions-base</artifactId>
-        <version>5.1.4-SNAPSHOT</version>
+        <version>5.2.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
