--- a/legend-pure-functions/legend-pure-functions-base/legend-pure-m2-functions-base-pure/pom.xml
+++ b/legend-pure-functions/legend-pure-functions-base/legend-pure-m2-functions-base-pure/pom.xml
@@ -72,6 +72,22 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.finos.legend.pure</groupId>
+                <artifactId>legend-pure-maven-generation-pct</artifactId>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>generate-pct-functions</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <targetDir>${project.build.directory}/classes/pct-reports/</targetDir>
+                    <scopeProviderMethod>org.finos.legend.pure.code.core.FunctionsCodeRepositoryProvider.baseFunctions</scopeProviderMethod>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
@@ -79,5 +95,26 @@
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m3-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
