--- a/legend-pure-functions/legend-pure-functions-base/legend-pure-runtime-java-extension-compiled-functions-base/pom.xml
+++ b/legend-pure-functions/legend-pure-functions-base/legend-pure-runtime-java-extension-compiled-functions-base/pom.xml
@@ -94,7 +94,7 @@
                         <id>PCT-Generation</id>
                         <phase>process-test-classes</phase>
                         <goals>
-                            <goal>generate-pct</goal>
+                            <goal>generate-pct-report</goal>
                         </goals>
                     </execution>
                 </executions>
