--- a/legend-pure-functions/legend-pure-functions-relation/legend-pure-runtime-java-extension-compiled-functions-relation/pom.xml
+++ b/legend-pure-functions/legend-pure-functions-relation/legend-pure-runtime-java-extension-compiled-functions-relation/pom.xml
@@ -114,7 +114,7 @@
                         <id>PCT-Generation</id>
                         <phase>process-test-classes</phase>
                         <goals>
-                            <goal>generate-pct</goal>
+                            <goal>generate-pct-report</goal>
                         </goals>
                     </execution>
                 </executions>
