--- a/legend-pure-maven/legend-pure-maven-generation-pct/pom.xml
+++ b/legend-pure-maven/legend-pure-maven-generation-pct/pom.xml
@@ -62,6 +62,11 @@
 
         <dependency>
             <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-m3-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-runtime-java-engine-compiled</artifactId>
         </dependency>
 
@@ -82,5 +87,6 @@
             <groupId>org.eclipse.collections</groupId>
             <artifactId>eclipse-collections-api</artifactId>
         </dependency>
+
     </dependencies>
 </project>
